feat: migrate from in-memory storage to Hibernate ORM with H2
BREAKING CHANGE: Replace ConcurrentHashMap storage with Hibernate/JPA persistence

Models:
- User is now a separate JPA entity (composition over inheritance)
- TrainingType changed from enum to JPA entity table
- Trainee/Trainer use @OneToOne with User, @ManyToMany between each other
- Training uses @ManyToOne relationships to Trainee, Trainer, TrainingType
- Trainee cascade deletes its User and related Trainings

DAOs:
- Replace in-memory storage with Hibernate SessionFactory queries
- Add UserDao, TrainingTypeDao for new entities
- Add findByUsername, findUnassignedTrainers, filtered training queries

Services:
- Add authentication (username/password matching) for Trainee and Trainer
- Add password change, activate/deactivate (non-idempotent), delete by username
- Add filtered training queries, unassigned trainers, update trainee's trainers
- Add required field validation on create/update operations
- All service methods are @Transactional

Facade:
- Implement all 18 required operations
- Authentication enforced on all operations except profile creation
- SecurityException thrown on invalid credentials

Config:
- Add HibernateConfig with DataSource, SessionFactory, TransactionManager
- Add @EnableTransactionManagement
- Remove StorageConfig and StorageInitializer (replaced by Hibernate)
- Seed TrainingType constants via import.sql

Tests:
- 166 tests across 16 test classes, 0 failures
- 97.9% instruction coverage (excluding config/main classes)
- DAO integration tests with H2, service/facade unit tests with Mockito
- Model tests for equals/hashCode/toString coverage